bugfix: fixed order of previous/next links on detail pages on mobile
changed format of multiline metadata from <br/> -> |

--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -6,6 +6,7 @@
   grid-template-columns: subgrid;
   display: grid;
   grid-column: var(--pagination-grid-column);
+  order: 100;
 
   @media (width > 1024px) {
     & {
